finish the first demo scene
+ bullets
o modify the collision solver
+ broken platforms
+ death detection

--- a/index.html
+++ b/index.html
@@ -130,13 +130,18 @@
         <script type="text/javascript" src="src/MyGame/Tools/Sentence.js"></script>
         <!-- Client Hero Objects -->
         <script type="text/javascript" src="src/MyGame/HeroObjects/Hero.js"></script>
+        <script type="text/javascript" src="src/MyGame/HeroObjects/Bullet.js"></script>
+        <script type="text/javascript" src="src/MyGame/HeroObjects/BulletSet.js"></script>
+        <!-- Client Boss Objects -->
+        <script type="text/javascript" src="src/MyGame/BossObjects/Boss.js"></script>
         <!-- Client Platform Objects -->
-        <script type="text/javascript" src="src/MyGame/PlatformObjects/MovePlatform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/NonTexture.js"></script>
-        <script type="text/javascript" src="src/MyGame/PlatformObjects/NormalPlatform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/Platform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/Stab.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/StabSet.js"></script>
+        <script type="text/javascript" src="src/MyGame/PlatformObjects/MovePlatform.js"></script>
+        <script type="text/javascript" src="src/MyGame/PlatformObjects/NormalPlatform.js"></script>
+        <script type="text/javascript" src="src/MyGame/PlatformObjects/BrokenPlatform.js"></script>
         
         <link rel="stylesheet" type="text/css" href="LoadingIcons.css"> 
     </head>
