make platfroms movable

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <!-- Client Boss Objects -->
         <script type="text/javascript" src="src/MyGame/BossObjects/Boss.js"></script>
         <!-- Client Platform Objects -->
+        <script type="text/javascript" src="src/MyGame/PlatformObjects/ObjectProto.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/NonTexture.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/Platform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/Stab.js"></script>
