construct the startScene and modify the UIButton

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
         <script type="text/javascript" src="src/MyGame/BossLevel.js"></script>
         <script type="text/javascript" src="src/MyGame/SecondLevel.js"></script>
+        <script type="text/javascript" src="src/MyGame/StartScene.js"></script>
         <!-- Client tools -->
         <script type="text/javascript" src="src/MyGame/Tools/VProcessor.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/SolveCollision.js"></script>
@@ -144,6 +145,7 @@
         <script type="text/javascript" src="src/MyGame/PlatformObjects/MovePlatform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/NormalPlatform.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/BrokenPlatform.js"></script>
+
         
         <link rel="stylesheet" type="text/css" href="LoadingIcons.css"> 
     </head>
