--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <!-- Client game code -->
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
         <script type="text/javascript" src="src/MyGame/BossLevel.js"></script>
+        <script type="text/javascript" src="src/MyGame/FirstLevel.js"></script>
         <script type="text/javascript" src="src/MyGame/SecondLevel.js"></script>
-        <script type="text/javascript" src="src/MyGame/StartScene.js"></script>
         <!-- Client tools -->
         <script type="text/javascript" src="src/MyGame/Tools/VProcessor.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/SolveCollision.js"></script>
