Realize the traps at level2 and modify the stabset class

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <script type="text/javascript" src="src/MyGame/Tools/VProcessor.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/SolveCollision.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/Sentence.js"></script>
+        <script type="text/javascript" src="src/MyGame/Tools/FirstTrap.js"></script>
         <!-- Client Hero Objects -->
         <script type="text/javascript" src="src/MyGame/HeroObjects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/HeroObjects/Bullet.js"></script>
