paper hint trigger event

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <script type="text/javascript" src="src/MyGame/Tools/SolveCollision.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/Sentence.js"></script>
         <script type="text/javascript" src="src/MyGame/Tools/FirstTrap.js"></script>
+        <script type="text/javascript" src="src/MyGame/Tools/BossTrap.js"></script>
         <!-- Client Hero Objects -->
         <script type="text/javascript" src="src/MyGame/HeroObjects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/HeroObjects/Bullet.js"></script>
