Record the time

--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
         "
         style = "height: 100%; margin: 0px; min-width: 1370px; min-height: 675px;"
         >
-        <span id="DeathNum" style="display: flex;position: absolute;top: 60px;left: 85px;font-size: 18px;">Death: 0 </span>
-        <span id="Time" style="position: absolute;top: 60px;left: 160px;font-size: 18px;"> </span>
+        <span id="DeathNum" style="display: flex;position: absolute;top: 20px;left: 85px;font-size: 18px;">Death: 0 </span>
+        <span  style="position: absolute;top: 20px;left: 160px;font-size: 18px;">Time:  </span>
+        <span id="Time" style="position: absolute;top: 20px;left: 210px;font-size: 18px;">0.00</span>
+        <span  style="position: absolute;top: 20px;left: 260px;font-size: 18px;"> sec</span>
+        <span id="Tip" style="position: absolute;top: 20px;left: 300px;font-size: 18px;"></span>
         <div style="display: flex; height: 100%; justify-content:center; align-items: center">
             <img src="assets/html/cheat1.png" id="LeftSpan" />
 <!--            <span id="DeathNum" style="position: absolute;top: 60px;left: 85px;font-size: 18px;">Death: 0 </span>
