finish boss level

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <script type="text/javascript" src="src/MyGame/HeroObjects/BulletSet.js"></script>
         <!-- Client Boss Objects -->
         <script type="text/javascript" src="src/MyGame/BossObjects/Boss.js"></script>
+        <script type="text/javascript" src="src/MyGame/BossObjects/BossBullet.js"></script>
+        <script type="text/javascript" src="src/MyGame/BossObjects/BossBSet.js"></script>
+        <script type="text/javascript" src="src/MyGame/BossObjects/BossStabSetSet.js"></script>
         <!-- Client Platform Objects -->
         <script type="text/javascript" src="src/MyGame/PlatformObjects/ObjectProto.js"></script>
         <script type="text/javascript" src="src/MyGame/PlatformObjects/SpriteObj.js"></script>
