--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>I wanna be a dreamer</title>
         <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Squada+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
 
         <!-- the following says there are javascript source code contained in 
              the external source files
@@ -166,29 +167,34 @@
                 var myGame = new MyGame();
                 gEngine.Core.initializeEngineCore('GLCanvas', myGame);
         "
-        style = "height: 100%; margin: 0px; min-width: 1370px; min-height: 675px;"
+        style = "height: 100%; margin: 0px; min-width: 1370px; min-height: 705px;"
         >
-        <span id="DeathNum" style="display: flex;position: absolute;top: 20px;left: 85px;font-size: 18px;">Death: 0 </span>
-        <span  style="position: absolute;top: 20px;left: 160px;font-size: 18px;">Time:  </span>
-        <span id="Time" style="position: absolute;top: 20px;left: 210px;font-size: 18px;">0.00</span>
-        <span  style="position: absolute;top: 20px;left: 260px;font-size: 18px;"> sec</span>
-        <span id="Tip" style="position: absolute;top: 20px;left: 300px;font-size: 18px;"></span>
-        <div style="display: flex; height: 100%; justify-content:center; align-items: center">
-            <img src="assets/html/cheat1.png" id="LeftSpan" />
-<!--            <span id="DeathNum" style="position: absolute;top: 60px;left: 85px;font-size: 18px;">Death: 0 </span>
-            <span id="Time" style="position: absolute;top: 60px;left: 160px;font-size: 18px;"> </span>-->
-            <div id="LoadingIconParent" style="width: 1200px; height: 675px;">
-            
-                <canvas id="GLCanvas">
-                    <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
-                    Your browser does not support the HTML5 canvas.
-                    <!-- this message will show only if WebGL clearing failed -->
-                </canvas>
 
-                <script type="text/javascript"> gEngine.LoadingIconConfig.setup();</script>
+        <div style="display: flex; height: 100%; flex-direction: column; justify-content:center; align-items: center;">
+            <div style="display: flex; height: 30px; justify-content: space-between; width: 1200px">
+                <div style="display: flex;">
+                    <div id="DeathNum"> Death: 0 </div>
+                    <div id="Time"> Time: 0.00</div>
+                </div>
+                <div id="Tip"> </div>
             </div>
 
-            <img src="assets/html/cheat2.png" id="RightSpan" />
+            <div style="display: flex; justify-content:center; align-items: center">
+                <img src="assets/html/cheat1.png" id="LeftSpan" />
+
+                <div id="LoadingIconParent" style="width: 1200px; height: 675px;">
+
+                    <canvas id="GLCanvas">
+                        <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
+                        Your browser does not support the HTML5 canvas.
+                        <!-- this message will show only if WebGL clearing failed -->
+                    </canvas>
+
+                    <script type="text/javascript"> gEngine.LoadingIconConfig.setup();</script>
+                </div>
+
+                <img src="assets/html/cheat2.png" id="RightSpan" />
+            </div>
         </div>
     </body>
 
